<resources>
    <string name="app_name">AnotherTodoApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_todos">Your to\'dos</string>
    <string name="all">All</string>
    <string name="incomplete">Incomplete</string>
    <string name="complete">Complete</string>
    <string name="write_todo">Write todo</string>
    <string name="write_a_todo">Write a todo</string>
    <string name="close_bottom_sheet">Close bottom sheet</string>
    <string name="done">Done</string>
    <string name="what_do_you_gonna_do">What do you gonna do?</string>
    <string name="delete">Delete</string>
    <string name="workspaces">Workspaces</string>
    <string name="create_workspace">Create workspace</string>
    <string name="update_workspace">Update workspace</string>
    <string name="go_back">Go back</string>
    <string name="how_should_it_be_called">How should it be called?</string>
    <string name="categories">Categories</string>
    <string name="create_category">Create category</string>
    <string name="create">Create</string>
</resources>